feat: Add comprehensive Python testing infrastructure with Poetry
- Set up Poetry package management with pyproject.toml
- Add pytest, pytest-cov, and pytest-mock as dev dependencies
- Configure pytest with custom markers (unit, integration, slow)
- Set up coverage reporting with 80% threshold (disabled until source code exists)
- Create test directory structure with conftest.py and shared fixtures
- Add validation tests to verify infrastructure works
- Update .gitignore with testing and development patterns
- Configure test scripts accessible via `poetry run test` or `poetry run tests`

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,45 @@
 *.db
 *.db.tmp
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+coverage.xml
+*.pyc
+__pycache__/
+.tox/
+.nox/
+.hypothesis/
+*.cover
+*.py,cover
+.coverage.*
+
+# Poetry
+dist/
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.env/
+virtualenv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Build artifacts
+build/
+*.egg-info/
+*.egg
+*.whl
+pip-wheel-metadata/
+
+# Claude settings
+.claude/*
